--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "pwa",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
+        "build": "nodemon index.js",
+        "dev": "nodemon index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "nodemon index.js"
     },
     "repository": {
         "type": "git",
