--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/rasel-mahmud-dev/pwa-website#readme",
     "dependencies": {
+        "dotenv": "^16.0.2",
         "ejs": "^3.1.8",
         "esbuild-sass-plugin": "^2.3.2",
         "express": "^4.18.1",
