--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     },
     "homepage": "https://github.com/rasel-mahmud-dev/pwa-website#readme",
     "dependencies": {
+        "axios": "^0.27.2",
         "dotenv": "^16.0.2",
         "ejs": "^3.1.8",
         "esbuild-sass-plugin": "^2.3.2",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^4.9.1",
         "npm-run-all": "^4.1.5",
         "preact": "^10.11.0",
         "preact-router": "^4.1.0"
