--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
         "ejs": "^3.1.8",
         "esbuild-sass-plugin": "^2.3.2",
         "express": "^4.18.1",
+        "highlight.js": "^11.6.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.9.1",
         "npm-run-all": "^4.1.5",
         "preact": "^10.11.0",
-        "preact-router": "^4.1.0"
+        "preact-router": "^4.1.0",
+        "quill": "^1.3.6"
     },
     "devDependencies": {
-        "esbuild": "^0.15.7"
+        "esbuild": "^0.15.7",
+        "esbuild-plugin-alias": "^0.2.1",
+        "esbuild-plugin-svgr": "^1.0.1"
     }
 }
